@@ -99,9 +99,6 @@ class TableSet(Mapping, Patchable):
         self.select = TableMethodProxy(self, 'select')
         self.where = TableMethodProxy(self, 'where')
         self.find = TableMethodProxy(self, 'find')
-        self.stdev_outliers = TableMethodProxy(self, 'stdev_outliers')
-        self.mad_outliers = TableMethodProxy(self, 'mad_outliers')
-        self.pearson_correlation = TableMethodProxy(self, 'pearson_correlation')
         self.order_by = TableMethodProxy(self, 'order_by')
         self.limit = TableMethodProxy(self, 'limit')
         self.distinct = TableMethodProxy(self, 'distinct')
