@@ -1,6 +1,8 @@
 0.11.0
 ------
 
+* Add agate-stats references to docs.
+* Move stdev_outliers, mad_outliers and pearson_correlation into agate-stats. (#260)
 * Add agate-charts references to docs. (#259)
 * Prevent issues with applying patches multiple times. (#258)
 
